<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/blue_rounded_background"
    android:layout_marginStart="@dimen/common_spacing_8"
    android:layout_marginEnd="@dimen/common_spacing_8"
    android:layout_marginTop="@dimen/common_spacing_8"
    android:layout_marginBottom="@dimen/common_spacing_8"
    app:strokeColor="@color/blue"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_repository_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/repository_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing_16"
            android:layout_marginTop="@dimen/common_spacing_8"
            android:text="@string/repository_name_text_view"
            android:textAppearance="@style/DefaultHeader.Primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing_16"
            android:layout_marginTop="@dimen/common_spacing_8"
            android:layout_marginEnd="@dimen/common_spacing_8"
            android:text="@string/description_text_view"
            android:textAppearance="@style/DefaultMedium.Primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repository_name" />

        <TextView
            android:id="@+id/last_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing_16"
            android:layout_marginTop="@dimen/common_spacing_8"
            android:textAppearance="@style/DefaultMedium.Primary"
            android:text="@string/last_push_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />


        <TextView
            android:id="@+id/forks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing_16"
            android:layout_marginTop="@dimen/common_spacing_8"
            android:textAppearance="@style/DefaultMedium.Primary"
            android:text="@string/forks_numbers_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_push" />

        <TextView
            android:id="@+id/stars_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_8"
            android:layout_marginStart="@dimen/common_spacing_16"
            android:text="@string/stars_numbers_text_view"
            android:textAppearance="@style/DefaultMedium.Primary"
            app:layout_constraintStart_toEndOf="@+id/forks_count"
            app:layout_constraintTop_toBottomOf="@+id/last_push" />

        <TextView
            android:id="@+id/languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing_16"
            android:layout_marginTop="@dimen/common_spacing_8"
            android:text="@string/default_language_text_view"
            android:textAppearance="@style/DefaultMedium.Primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forks_count" />

        <TextView
            android:id="@+id/default_branch"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="@dimen/common_spacing_16"
            android:layout_marginTop="@dimen/common_spacing_8"
            android:layout_marginBottom="@dimen/common_spacing_8"
            android:text="@string/default_branch_text_view"
            android:textAppearance="@style/DefaultMedium.Primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languages" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

